# Clearbox-AI-Plugin-Runner

./: plugin_runner.py  plugin_runner_ui.html
plugins/wolf_engine/: .gitignore  INTROSPECTION.md  PLUGIN_INTEGRATION_GUIDE.md  TRACKING.md  __init__.py  config.py  contracts.py  logging_config.py  pipeline.py  pyproject.toml  restart.py  schemas.py  start.py  stop.py
plugins/wolf_engine/api/: models.py  router.py
plugins/wolf_engine/archon/: __init__.py  cam_stub.py  judge.py  orchestrator.py  schemas.py  verdict.py
plugins/wolf_engine/core/: engine.py
plugins/wolf_engine/dashboard/: app.py  metrics_collector.py  metrics_exporter.py  web.py
plugins/wolf_engine/evidence/: __init__.py  fusion.py  session_manager.py  timebase.py  worker_base.py  workers.py
plugins/wolf_engine/forge/: forge_memory.py
plugins/wolf_engine/gnome/: config.py  gnome_service.py  integrity.py  symbol_genome_loader.py  symbolizer.py
plugins/wolf_engine/gpu/: __init__.py  device.py  forge_memory_gpu.py  ncv_batch.py  window_engine.py
plugins/wolf_engine/metrics/: collector.py  exporter.py
plugins/wolf_engine/modules/: base.py  registry.py  truevision.py
plugins/wolf_engine/reasoning/: __init__.py  cascade_engine.py  causal_analyzer.py  engine.py  pattern_detector.py  reasoning_service.py
plugins/wolf_engine/services/: __init__.py  cluster_config.json  forge_service.py  gateway.py  health.py  perception_service.py  protocol.py
plugins/wolf_engine/sql/: sqlite_reader.py  sqlite_writer.py
plugins/wolf_engine/tests/: conftest.py  test_acceptance.py  test_api.py  test_archon.py  (+8 more)
(+217 files in other folders)
